kubernetes/vsftpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: vsftpd
  name: vsftpd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vsftpd
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/fileserver_net: "true"
        io.kompose.service: vsftpd
    spec:
      containers:
        - env:
            - name: FTP_PASS
              value: secure123!
            - name: FTP_PASSIVE_PORTS
              value: 40000:40009
            - name: FTP_USER
              value: kspir
          image: vsftpd
          name: fileserver
          ports:
            - containerPort: 20
            - containerPort: 21
            - containerPort: 40000
            - containerPort: 40001
            - containerPort: 40002
            - containerPort: 40003
            - containerPort: 40004
            - containerPort: 40005
            - containerPort: 40006
            - containerPort: 40007
            - containerPort: 40008
            - containerPort: 40009
          resources: {}
      restartPolicy: Always
status: {}
